fix: set max z-index for widget iframe

--- a/src/content.scss
+++ b/src/content.scss
@@ -6,6 +6,7 @@
 }
 
 .drill-widget-iframe {
+  z-index: 2147483647;
   left: 0;
   top: 0;
   position: fixed;
